add semantic kernel sample

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
-name = "hand-off-agents"
+name = "socal-media-craft-agent"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "semantic-kernel>=1.20.0",
     "autogen-agentchat>=0.4.4",
-    "autogen-ext[azure,openai,web-surfer,web-surver]>=0.4.4",
-    "playwright>=1.50.0",
+    "autogen-ext[azure,openai,web-surfer]>=0.4.4",
     "python-dotenv>=1.0.1",
     "tavily-python>=0.5.0",
 ]
